# mac-illusion-of-thinking

./: .gitignore  LICENSE  README.md  pyproject.toml  tower-of-hanoi-prompt.md  tower_of_hanoi_experiment.py
html/: tower-of-hanoi-html
results/experiment_3_disks_temp_0.0_20250718_180354/: metadata.json  summary.json
results/experiment_3_disks_temp_0.0_20250718_180354/run_1/: response.txt  validation.json
results/experiment_3_disks_temp_0.0_20250718_180354/run_2/: moves.json  response.txt
results/experiment_3_disks_temp_0.0_20250718_180354/run_3/: response.txt
results/experiment_7_disks_temp_0.0_20250718_180840/: metadata.json  summary.json
results/experiment_7_disks_temp_0.0_20250718_180840/run_1/: response.txt
results/experiment_7_disks_temp_0.0_20250718_180840/run_3/: response.txt
results/experiment_7_disks_temp_0.0_20250718_180840/run_4/: response.txt
results/experiment_7_disks_temp_0.0_20250718_183024/: metadata.json  summary.json
results/experiment_8_disks_temp_0.0_20250718_183209/: metadata.json  summary.json
results/experiment_8_disks_temp_0.0_20250718_194112/: summary.json
results/experiment_8_disks_temp_0.0_20250718_194403/: summary.json
results/experiment_9_disks_temp_0.0_20250718_184459/: metadata.json  summary.json
results/experiment_9_disks_temp_0.0_20250718_185253/: metadata.json  summary.json
results/experiment_9_disks_temp_0.0_20250718_190103/: metadata.json  summary.json
results/experiment_9_disks_temp_0.0_20250718_192031/: summary.json
results/experiment_9_disks_temp_0.0_20250718_192737/: summary.json
(+94 files in other folders)
